[project]
name = "raphs-indicators"
version = "0.1.0"
description = "Technical analysis indicators for financial market analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ta-lib>=0.6.0",
    "rich>=13.7.0",
    "ccxt>=4.4.44",
    "ccxt-easy-dl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.uv.sources]
ccxt-easy-dl = { git = "https://github.com/raphant/ccxt-easy-dl.git" }

[dependency-groups]
dev = [
    "backtesting>=0.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]
